# hisaac.net

./: .editorconfig  .gitignore  .gitmodules  .mise.toml  .prettierignore  .prettierrc.yaml  .prettierrc.yml  .tool-versions  .travis.yml  .yamlfmt.yml  .yamllint.yml  404.html  Brewfile  Brewfile.lock.json  CHANGELOG.md  CLAUDE.md  Gemfile  LICENSE  Makefile  NOTES.md  Pipfile  README-blog.md  README.md  _config.yml  _redirects  about.md  artifacts.md  canon.md  config.toml  content  feed.json  go.mod  go.sum  gulpfile.js  hk.pkl  home.md  hugo.toml  hugo.yml  humans 2.txt  humans.txt  (+15 more)
.config/: hugo.toml  mise.toml  package-lock.json  package.json
.nova/: Configuration.json
.well-known/: humans.txt  robots.txt
_drafts/: 2020-01-01-my-favorite-music-of-2019.md
_includes/: footer.html  head.html  header.html  nav.html
_layouts/: home.html  post.html
_plugins/: extract_hostname.rb
_posts/: 2020-02-25-welcome-to-jekyll.markdown
_sass/: code.scss  custom.scss  main.scss  syntax-highlighting.scss
archetypes/: default.md
archive/: LICENSE.txt
content/: about.md  artifacts.md  canon.md  now.md
hugo/: LICENSE
jekyll/: about.md
living-documents/: adventure-games-id-like-to-play.md  games-to-keep-an-eye-on.md  great-softwares.md  hisaacs-rules-for-social-etiquette.md  music-i-want-to-like-but-i-dont.md  my-gear.md  my-guide-to-the-twin-cities.md  vehicles-that-i-like.md
pages/: CenterMouse.md  about.md  artifacts.md  canon.md  more.md  now.md  projects.md
resume/: index.html  main.css
scripts/: .shellcheckrc  build.sh  clean.sh  format.sh  generate-syntax.sh  get_posts_from_dropbox.py  jekyll-to-bear.py  lint.sh  list-full.html  run.sh  rym-list-to-md.py  up.sh  (+1 more)
(+614 files in other folders)
