[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "hisaac.net"
version = "0.1.0"
authors = [{name = "Isaac Halvorson", email = "hello@hisaac.net"}]
license = {text = "MIT"}
description = "The personal website of Isaac Halvorson"
requires-python = ">=3.12.0"
dependencies = [
	"beautifulsoup4>=4.12.2",
	"requests>=2.31.0",
]

[project.urls]
homepage = "https://hisaac.net"
repository = "https://github.com/hisaac/hisaac.net"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
lint = [
	"pylance",
	"ruff",
]
dev = [
	"hisaac.net[lint]"
]

[tool.ruff.format]
indent-style = "tab"
