[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hisaac.net"
version = "0.0.1"
authors = [{ name = "Isaac Halvorson", email = "hello@hisaac.net" }]
license = { text = "MIT" }
description = "The personal website of Isaac Halvorson"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
]

[project.urls]
homepage = "https://hisaac.net"
repository = "https://github.com/hisaac/hisaac.net"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
lint = [
    "pylance",
    "ruff",
]
dev = [
    "hisaac.net[lint]"
]

[tool.ruff]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C4", # flake8-comprehensions
    "TID", # flake8-tidy-imports
]

[tool.ruff.format]
indent-style = "tab"
